# simple-tui

./: .gitignore  LICENSE  README.md  demo_app.py  demo_headless.py  pyproject.toml  requirements.txt  run_showcase.sh
docs/: API_DOCS.md  ARCHITECTURE.md  COOKBOOK.md  HEADLESS_MODE.md  README.md
examples/: README.md  commands.txt  interactive_commands.txt  responses.json
tests/: test_commands.py  test_completer.py  test_headless.py  test_history_and_errors.py  test_hooks.py  test_print_queue.py  test_rendering.py
tui/: __init__.py  app.py  commands.py  completers.py  history.py  interaction.py  messages.py  ptkstyle.py  theme.py  transcript.py  ui.py
